tests/parsing/errors/structure/letBindingPatternKeyword.js
let open = 1
let module = 2
let to = 3
